# app-sdrater

./: Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml
app/: main.py  requirements.txt
data/test_datasets/: banking_real.csv  banking_synthetic.csv  ecommerce_real.csv  ecommerce_synthetic.csv  generate_test_datasets.ipynb  medical_real.csv  medical_synthetic.csv  simple_real.csv  simple_synthetic.csv
