[project]
name = "data-rater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "plotly>=6.3.1",
    "sdv>=1.28.0",
    "streamlit>=1.51.0",
]
